app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

p.notice, p.alert {
  position: absolute;
  top: 0;
  width: 810px;
  margin: auto;
  margin-top: 0px;
  border-bottom-right-radius: 10px 10px;
  border-bottom-left-radius: 10px 10px;
  border: 1px dotted black;
  border-top: 0px solid transparent;
  padding: 10px;
  text-align: center;
}

p.notice:hover, p.alert:hover {
  cursor: pointer;
}

p.alert {
  background-color: pink;
  border-color: coral;
  color: red;
  font-weight: bold;
}

p.notice {
  background-color: #57E964;
  border-color: #41A317;
  color: #348017;
  font-weight: bold;
}

